--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "16.6.3",
     "react-native": "0.58.0-rc.2",
     "react-native-device-info": "^0.26.4",
+    "react-native-dialog": "^5.5.0",
     "react-native-firebase": "^5.2.0",
     "tcomb-form-native": "^0.6.20"
   }
