--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.4",
     "axios": "^0.18.0",
     "react": "16.6.3",
     "react-native": "0.58.0-rc.2",
