--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@babel/runtime": "^7.3.4",
     "react": "16.6.3",
-    "react-native": "0.58.0-rc.2",
+    "react-native": "^0.58.6",
     "react-native-device-info": "^0.26.4",
     "react-native-dialog": "^5.5.0",
     "react-native-firebase": "^5.2.0",
