--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ platform :ios, '9.0'
 
 target 'MigrationsverketNotification' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+  use_frameworks!
 
   # Pods for MigrationsverketNotification
 
@@ -13,7 +13,7 @@ target 'MigrationsverketNotification' do
   # [OPTIONAL PODS] - comment out pods for firebase products you won't be using.
   pod 'Firebase/AdMob', '~> 5.15.0'
   pod 'Firebase/Auth', '~> 5.15.0'
-  pod 'Firebase/Core', '~> 5.15.0'
+  # pod 'Firebase/Core', '~> 5.15.0'
   pod 'Firebase/Database', '~> 5.15.0'
   pod 'Firebase/Functions', '~> 5.15.0'
   pod 'Firebase/DynamicLinks', '~> 5.15.0'
@@ -25,7 +25,6 @@ target 'MigrationsverketNotification' do
   pod 'Firebase/Performance', '~> 5.15.0'
   pod 'Fabric', '~> 1.7.13'
   pod 'Crashlytics', '~> 3.10.9'
-
 
 
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
