--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,7 +13,7 @@ target 'MigrationsverketNotification' do
   # [OPTIONAL PODS] - comment out pods for firebase products you won't be using.
   pod 'Firebase/AdMob', '~> 5.15.0'
   pod 'Firebase/Auth', '~> 5.15.0'
-  pod 'Firebase/Core', '~> 5.15.0'
+  pod 'Firebase/Analytics', '~> 5.15.0'
   pod 'Firebase/Database', '~> 5.15.0'
   pod 'Firebase/Functions', '~> 5.15.0'
   pod 'Firebase/DynamicLinks', '~> 5.15.0'
@@ -25,7 +25,6 @@ target 'MigrationsverketNotification' do
   pod 'Firebase/Performance', '~> 5.15.0'
   pod 'Fabric', '~> 1.7.13'
   pod 'Crashlytics', '~> 3.10.9'
-
 
 
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
