--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,4 +29,6 @@ target 'MigrationsverketNotification' do
 
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
 end
