--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-webview')
     implementation project(':react-native-device-info')
     implementation project(':react-native-firebase')
   //noinspection GradleDynamicVersion
