--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-device-info": "^0.26.4",
     "react-native-dialog": "^5.5.0",
     "react-native-firebase": "^5.2.3",
+    "react-native-webview": "^5.3.0",
     "tcomb-form-native": "^0.6.20"
   }
 }
