--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
   "name": "MigrationsverketNotification",
-  "displayName": "MigrationsverketNotification"
+  "displayName": "Migrationsverket Notification"
 }
