--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,7 @@ platform :ios, '9.0'
 
 target 'MigrationsverketNotification' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+  use_frameworks!
 
   # Pods for MigrationsverketNotification
 
@@ -29,6 +29,8 @@ target 'MigrationsverketNotification' do
 
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
 
-  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+  post_install do |installer|
+    system("mkdir -p Pods/Headers/Public/FirebaseCore && cp Pods/FirebaseCore/Firebase/Core/Public/* Pods/Headers/Public/FirebaseCore/")
+  end
 
 end
