--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,4 +26,6 @@ target 'MigrationsverketNotification' do
   pod 'Fabric', '~> 1.7.13'
   pod 'Crashlytics', '~> 3.10.9'
 
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
 end
