--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "0.58.0-rc.2",
+    "react-native-device-info": "^0.29.0",
     "react-native-firebase": "^5.2.0"
   }
 }
