fix issues to run, archive and remove device info

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,7 +154,7 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-device-info')
+    implementation project(':react-native-firebase')
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation fileTree(dir: "libs", include: ["*.jar"])
