--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,27 +5,59 @@ target 'MigrationsverketNotification' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
+  pod 'React', :path => '../node_modules/react-native', :subspecs => [
+    'Core',
+    'CxxBridge', # Include this for RN >= 0.47
+    'DevSupport', # Include this to enable In-App Devmenu if RN >= 0.43
+    'RCTText',
+    'RCTNetwork',
+    'RCTWebSocket', # Needed for debugging
+    'RCTAnimation', # Needed for FlatList and animations running on native UI thread
+    # Add any other subspecs you want to use in your project
+  ]
+
   # Pods for MigrationsverketNotification
+  pod 'Firebase/Core', '~> 6.3.0'
+  pod 'Firebase/Auth', '~> 6.3.0'
+  pod 'Firebase/RemoteConfig', '~> 6.3.0'
+  pod 'Firebase/Firestore', '~> 6.3.0'
+  pod 'Firebase/Messaging', '~> 6.3.0'
+  pod 'Fabric', '~> 1.10.2'
+  pod 'Crashlytics', '~> 3.13.2'
 
-  # Required by RNFirebase
-  pod 'Firebase/Core', '~> 5.15.0'
-
-  # [OPTIONAL PODS] - comment out pods for firebase products you won't be using.
-  pod 'Firebase/AdMob', '~> 5.15.0'
-  pod 'Firebase/Auth', '~> 5.15.0'
-  pod 'Firebase/Core', '~> 5.15.0'
-  pod 'Firebase/Database', '~> 5.15.0'
-  pod 'Firebase/Functions', '~> 5.15.0'
-  pod 'Firebase/DynamicLinks', '~> 5.15.0'
-  pod 'Firebase/Firestore', '~> 5.15.0'
-  # pod 'Firebase/Invites', '~> 5.15.0'
-  pod 'Firebase/Messaging', '~> 5.15.0'
-  pod 'Firebase/RemoteConfig', '~> 5.15.0'
-  pod 'Firebase/Storage', '~> 5.15.0'
-  pod 'Firebase/Performance', '~> 5.15.0'
-  pod 'Fabric', '~> 1.7.13'
-  pod 'Crashlytics', '~> 3.10.9'
+  # Explicitly include Yoga if you are using RN >= 0.42.0
+  pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
+  pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
+  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
+  pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+
+  # target 'MigrationsverketNotificationTests' do
+  #   inherit! :search_paths
+  #   # Pods for testing
+  # end
+end
+
+post_install do |installer|
+  system("mkdir -p Pods/Headers/Public/FirebaseCore && cp Pods/FirebaseCore/Firebase/Core/Public/* Pods/Headers/Public/FirebaseCore/")
+
+  # From https://github.com/facebook/react-native/issues/20492#issuecomment-422958184
+  installer.pods_project.targets.each do |target|
+
+    # The following is needed to ensure the "archive" step works in XCode.
+    # It removes React & Yoga from the Pods project, as it is already included in the main project.
+    # Without this, you'd see errors when you archive like:
+    # "Multiple commands produce ... libReact.a"
+    # "Multiple commands produce ... libyoga.a"
+
+    targets_to_ignore = %w(React yoga)
+
+    if targets_to_ignore.include? target.name
+      target.remove_from_project
+    end
+
+  end
 end
