--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "replace-in-file": "^3.4.2"
   },
   "scripts": {
-    "ios": "react-native run-ios --simulator=\"iPhone X\"",
+    "ios": "react-native run-ios",
     "ios:generate:icons": "yo rn-toolbox:assets --icon assets/logo.png",
     "ios:generate:splashscreen": "yo rn-toolbox:assets --splash assets/splash.png --ios",
     "android": "react-native run-android",
@@ -24,9 +24,11 @@
     "preset": "react-native"
   },
   "dependencies": {
-    "react": "16.6.3",
-    "react-native": "0.58.0-rc.2",
-    "react-native-firebase": "^5.2.0",
+    "react": "16.8.3",
+    "react-native": "0.59.9",
+    "react-native-firebase": "^5.5.3",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-navigation": "^3.11.1",
     "tcomb-form-native": "^0.6.20"
   }
 }
