--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "5.1.0",
   "private": true,
   "devDependencies": {
-    "babel-jest": "23.6.0",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.5.5",
+    "babel-jest": "^24.8.0",
     "fs-extra": "^6.0.1",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.49.2",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.49.2",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.7.0",
     "replace-in-file": "^3.4.2"
   },
@@ -18,10 +24,17 @@
     "apk": "cd android && ./gradlew assembleRelease",
     "rename": "node ./bin/rename.js",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest ./tests"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "testPathIgnorePatterns": ["<rootDir>/node_modules"],
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "dependencies": {
     "react": "16.8.3",
